--- a/index.html
+++ b/index.html
@@ -72,10 +72,11 @@
                     </h3>
                 </div>
                 <div class="col-md-6">
-                    <img class="curvedImg" src="Assets\Pics\cover_photo.png" alt="Alin on the railing">
+                    <img class="curvedImg img-fluid" src="Assets\Pics\cover_photo.png" alt="Alin on the railing">
                 </div>
             </div>
         </div>
+        <div class="container-fluid" id=""
     </div>
     
 
