--- a/tx2dayProject.html
+++ b/tx2dayProject.html
@@ -41,40 +41,14 @@
             <div class="row">
                 <div class="col-12">
                     <h2><a href="Tx2Day.com" target="_blank"></a>Tx2Day.com</h2>
-                    <h3>Design Mockups</h3>
+                    <h3>(Design Mockups)</h3>
                 </div>
             </div>
-            <!-- first row of pictures -->
+            <hr>
+            <!-- logo -->
             <div class="row">
-                <div class="col-md-6">
-                    <img class="curvedImg" src="Assets\Pics\Tx2Day\Tx2Day_Welcome.png" alt="The Tx2Day Welcome Page">
-                    <h5>Welcome Page</h5>
-                </div>
-                <div class="col-md-6">
-                    <img class="curvedImg" src="Assets\Pics\Tx2Day\Tx2Day_Sign_In.png" alt="The Tx2Day Sign-in Page">
-                    <h5>Sign In</h5>
-                </div>
-            </div>
-            <!-- second row of pictures -->
-            <div class="row">
-                <div class="col-md-3">
-                    <img class="curvedImg" src="Assets\Pics\Tx2Day\Tx2Day_Client_Select.png"
-                        alt="The Tx2Day Client Select Page">
-                    <h5>Client Selection</h5>
-                </div>
-                <div class="col-md-3">
-                    <img class="curvedImg" src="Assets\Pics\Tx2Day\Tx2Day_Location_Schedule.png"
-                        alt="The Tx2Day Location Select Page">
-                    <h5>Location Selection</h5>
-                </div>
-                <div class="col-md-3">
-                    <img class="curvedImg" src="Assets\Pics\Tx2Day\Tx2Day_Visit.png" alt="The Tx2Day Client Visit Page">
-                    <h5>Client Visit</h5>
-                </div>
-                <div class="col-md-3">
-                    <img class="curvedImg" src="Assets\Pics\Tx2Day\Tx2Day_Daily_Report.png"
-                        alt="The Tx2Day Daily Report Page">
-                    <h5>Daily Report</h5>
+                <div class="col-12">
+                    <img src="Assets\Pics\Tx2Day\Tx2Day Logo with BG.png" class="curvedImg img-fluid" alt="Tx2Day Logo">
                 </div>
             </div>
             <!-- text -->
@@ -111,7 +85,63 @@
                         bland theming.</h3>
                     </div>
                 </div>
-            </div>  
+            </div>
+            <hr>
+            <!-- section title Gallery -->
+            <div class="row">
+                <div class="col-12">
+                    <h3>Gallery</h3>
+                </div>
+            </div>
+            <!-- first row of pictures -->
+            <div class="row">
+                <div class="col-md-6">
+                    <h5>Welcome Page</h5>
+                    <img class="curvedImg img-fluid" src="Assets\Pics\Tx2Day\Tx2Day_Welcome.png" alt="The Tx2Day Welcome Page">
+                </div>
+                <div class="col-md-6">
+                    <h5>Sign In</h5>
+                    <img class="curvedImg img-fluid" src="Assets\Pics\Tx2Day\Tx2Day_Sign_In.png" alt="The Tx2Day Sign-in Page">
+                </div>
+            </div>
+            <!-- carousel -->
+            <div class="row">
+                <div class="col-12">
+                    <!-- autoscrolling image gallery of screenshots from Bootstrap-->
+                    <!-- a second interval is 1000 in the data-bs-interval variable -->
+                    <div id="carouselExampleInterval" class="carousel slide" data-bs-ride="carousel">
+                        <div class="carousel-inner">
+                            <div class="carousel-item active" data-bs-interval="5000">
+                                <img src="Assets\Pics\Tx2Day\Tx2Day_Client_Select.png" class="d-block w-100"
+                                    alt="Client Page">
+                            </div>
+                            <div class="carousel-item" data-bs-interval="5000">
+                                <img src="Assets\Pics\Tx2Day\Tx2Day_Daily_Report.png" class="d-block w-100"
+                                    alt="Daily Report">
+                            </div>
+                            <div class="carousel-item" data-bs-interval="5000">
+                                <img src="Assets\Pics\Tx2Day\Tx2Day_Location_Schedule.png" class="d-block w-100"
+                                    alt="Location Schedule">
+                            </div>
+                            <div class="carousel-item" data-bs-interval="5000">
+                                <img src="Assets\Pics\Tx2Day\Tx2Day_Visit.png" class="d-block w-100"
+                                    alt="Visit Page">
+                            </div>
+                        </div>
+                        <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleInterval"
+                            data-bs-slide="prev">
+                            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                            <span class="visually-hidden">Previous</span>
+                        </button>
+                        <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleInterval"
+                            data-bs-slide="next">
+                            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                            <span class="visually-hidden">Next</span>
+                        </button>
+                    </div>
+                </div>
+            </div>
+            <hr>
         </div>
     </div>
     
