--- a/musicProjects.html
+++ b/musicProjects.html
@@ -36,7 +36,11 @@
     <hr>
 
     <div id="contentDiv">
-        
+        <div class="row">
+            <div class="col-12">
+                <h5>goop</h5>
+            </div>
+        </div>
     </div>
     
 
